# databook

./: .gitignore  README.md
databook-rs/: Cargo.toml
databook-rs/examples/hello_world/: Cargo.toml  build.sh  wasi_snapshot_preview1.reactor.wasm  wasi_snapshot_preview1.wasm
databook-rs/examples/hello_world/src/: lib.rs
databook-rs/examples/hello_world/wit/: databook.wit
databook-rs/plugins/hello_world/: config.toml  plugin.wasm
databook-rs/proto/: service.proto
databook-rs/src/: bindings.rs  client.rs  http.rs  plugin_config.rs  plugin_manager.rs  plugin_runtime.rs  rest.rs  server.rs  wasm.rs
databook-rs/wit/: databook.wit
web/: package.json  tailwind.config.cjs
web/src/routes/: index.svelte
wit/: plugin.wit  readme.md  runtime.wit
