[package]
name = "databook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"
#[[bin]]
#name = "client"
#path = "src/client.rs"
[dependencies]
tonic = "0.7"
prost = "0.10"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.2.14", features = ["derive"] }
[build-dependencies]
tonic-build = "0.7"
