[package]
name = "databook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"
#[[bin]]
#name = "client"
#path = "src/client.rs"
[dependencies]
tonic = "0.7"
prost = "0.10"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.2.14", features = ["derive"] }
toml = "0.5.9"
serde = { version = "1.0.140", features = ["derive"] }
log = "0.4.17"
wasmtime = "0.38"
wasmtime-wasi = "0.38"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.1.0" }
once_cell = "1.13.0"
[build-dependencies]
tonic-build = "0.7"
