[package]
name = "databook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
async-trait = "0.1.57"
tonic = "0.7"
prost = "0.10"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "3.2.14", features = ["derive"] }
toml = "0.5.9"
serde = { version = "1.0.140", features = ["derive"] }
log = "0.4.17"
wasmtime = "1.0"
wasmtime-wasi = "1.0"
wit-bindgen-host-wasmtime-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", version = "0.2.0" }
once_cell = "1.13.0"
hyper = { version = "0.14", features = ["full"] }
crossbeam = "0.8.2"
url = "2.3.1"
[build-dependencies]
tonic-build = "0.7"

[dev-dependencies]
tokio-test = "0.4.2"
wiremock = "0.5.14"
